[gd_scene load_steps=4 format=3 uid="uid://df63fi5u7xpjt"]

[ext_resource type="Script" path="res://src/lobby/lobby.gd" id="1_g8t6r"]
[ext_resource type="PackedScene" uid="uid://2uclu3gf4iyj" path="res://src/level/main_floor/main_floor.tscn" id="2_px70m"]
[ext_resource type="PackedScene" uid="uid://bapt74v2o7kig" path="res://src/lobby/player_card/player_card.tscn" id="3_87r7n"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_g8t6r")
level = ExtResource("2_px70m")
player_card = ExtResource("3_87r7n")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 360.0
offset_bottom = 360.0

[node name="ActiveScrollContainer" type="ScrollContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 0

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="HBoxContainer/ActiveScrollContainer"]
_spawnable_scenes = PackedStringArray("res://src/lobby/player_card/player_card.tscn")
spawn_path = NodePath("../VBoxContainer/ActiveCards")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ActiveScrollContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/ActiveScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Participants"

[node name="ActiveCards" type="VBoxContainer" parent="HBoxContainer/ActiveScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="SpectateScrollContainer" type="ScrollContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 0

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="HBoxContainer/SpectateScrollContainer"]
_spawnable_scenes = PackedStringArray("res://src/lobby/player_card/player_card.tscn")
spawn_path = NodePath("../VBoxContainer/SpectateCards")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/SpectateScrollContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/SpectateScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Spectators"

[node name="SpectateCards" type="VBoxContainer" parent="HBoxContainer/SpectateScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HostMenu" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -280.0
offset_top = -61.0
grow_horizontal = 0
grow_vertical = 0
metadata/_edit_group_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="HostMenu"]
layout_mode = 2

[node name="Label" type="Label" parent="HostMenu/HBoxContainer"]
layout_mode = 2
text = "Ghost:"

[node name="GhostSelector" type="OptionButton" parent="HostMenu/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_bottom = NodePath("../../StartButton")
text_overrun_behavior = 3

[node name="StartButton" type="Button" parent="HostMenu"]
layout_mode = 2
focus_neighbor_top = NodePath("../HBoxContainer/GhostSelector")
text = "Start Game"

[connection signal="pressed" from="HostMenu/StartButton" to="." method="_on_start_button_pressed"]
